--- a/playbook.yml
+++ b/playbook.yml
@@ -3,10 +3,19 @@
   tasks:
     - apt: name=apt-transport-https update_cache=yes state=present
       sudo: yes
+    - name: add ansible repository
+      apt_repository: repo='ppa:rquillo/ansible'
+      sudo: yes
+    - name: install ansible
+      apt: name=ansible update_cache=yes state=present
+      sudo: yes
     - apt_key: keyserver=hkp://keyserver.ubuntu.com:80 id=36A1D7869245C8950F966E92D8576A8BA88D21E9
       sudo: yes
     - command: sudo bash -c "echo deb https://get.docker.com/ubuntu docker main > /etc/apt/sources.list.d/docker.list"
       register: output
     - debug: var=output.stdout_lines
     - apt: name=lxc-docker update_cache=yes state=present
+      sudo: yes
+    - name: ensure docker image created
+      command: docker build -t="sudarshan/apache-spark" /vagrant/docker-setup 
       sudo: yes
