Use ansible to manage the docker instance

--- a/docker-setup/Dockerfile
+++ b/docker-setup/Dockerfile
@@ -1,5 +1,10 @@
 FROM ubuntu:14.04
 MAINTAINER sudarshan
+RUN mkdir -p /work
+ADD * /work/
+RUN apt-get install -y software-properties-common
+RUN apt-add-repository ppa:ansible/ansible
 RUN apt-get update
-RUN apt-get install -y openjdk-7-jre
-
+RUN apt-get install -y ansible
+WORKDIR /work
+RUN ansible-playbook -i "localhost," -c local site.yml
