--- a/playbook.yml
+++ b/playbook.yml
@@ -10,6 +10,15 @@
     - debug: var=output.stdout_lines
     - apt: name=lxc-docker update_cache=yes state=present
       sudo: yes
-    - name: ensure docker image created
-      command: docker build -t="sudarshan/apache-spark" /vagrant/docker-setup 
+    - name: install pip
+      apt: name=python-pip state=present
+      sudo: yes
+    - name: install docker-py
+      pip: name=docker-py
+      sudo: yes
+    - name: create spark docker image
+      docker_image: path="/vagrant/docker-setup" name="sudarshan/apache-spark" state=present
+      sudo: yes
+    - name: start spark master
+      docker: image=sudarshan/apache-spark name=spark-master detach=True hostname=spark-master ports=8080:8080 state=running
       sudo: yes
